--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
     "vite": "https://aistudiocdn.com/vite@^7.2.7",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "lamejs": "https://aistudiocdn.com/lamejs@^1.2.1"
+    "lamejs": "https://aistudiocdn.com/lamejs@^1.2.1",
+    "url": "https://esm.sh/url@^0.11.4",
+    "path": "https://esm.sh/path@^0.12.7"
   }
 }
 </script>
